#1 web interface for managing promises has been created

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,14 +1,21 @@
-﻿@{
+﻿@using Microsoft.AspNetCore.Identity
+@using Promises.Models
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
+
 <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
+
+
     <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
         <li data-target="#myCarousel" data-slide-to="1"></li>
         <li data-target="#myCarousel" data-slide-to="2"></li>
         <li data-target="#myCarousel" data-slide-to="3"></li>
     </ol>
+
     <div class="carousel-inner" role="listbox">
         <div class="item active">
             <img src="~/images/banner1.svg" alt="ASP.NET" class="img-responsive" />
@@ -64,6 +71,7 @@
         <span class="sr-only">Next</span>
     </a>
 </div>
+
 
 <div class="row">
     <div class="col-md-3">
