--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -3,4 +3,5 @@
 @using Promises.Models
 @using Promises.Models.AccountViewModels
 @using Promises.Models.ManageViewModels
+@using Promises.Models.CabinetViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
