--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -14,6 +14,71 @@
             <li>
                 <button type="submit" class="btn btn-link navbar-btn navbar-link">Log out</button>
             </li>
+            <li>
+                <button type="button" id="_add_notification_button" class="btn btn-link navbar-btn navbar-link">Add notification</button>
+            </li>
+            <li class="dropdown dropdown-notifications">
+                <a href="#notifications-panel" class="dropdown-toggle" data-toggle="dropdown">
+                    <i data-count="2" class="glyphicon glyphicon-bell notification-icon"></i>
+                </a>
+
+                <div class="dropdown-container dropdown-position-bottomright">
+
+                    <div class="dropdown-toolbar">
+                        <div class="dropdown-toolbar-actions">
+                            <a href="#">Mark all as read</a>
+                        </div>
+                        <h3 class="dropdown-toolbar-title">Notifications (2)</h3>
+                    </div><!-- /dropdown-toolbar -->
+                    
+
+                    <ul id="_notifications_list" class="dropdown-menu notifications">
+                        <li class="notification">
+                            <div class="media">
+                                <div class="media-left">
+                                    <div class="media-object">
+                                        <img data-src="holder.js/50x50?bg=cccccc" class="img-circle" alt="Name">
+                                    </div>
+                                </div>
+                                <div class="media-body">
+                                    <strong class="notification-title"><a href="#">Nikola Tesla</a> resolved <a href="#">T-14 - Awesome stuff</a></strong>
+
+                                    <p class="notification-desc">Resolution: Fixed, Work log: 4h</p>
+
+                                    <div class="notification-meta">
+                                        <small class="timestamp">27. 10. 2015, 08:00</small>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </li>
+
+                        <li class="notification">
+                            <div class="media">
+                                <div class="media-left">
+                                    <div class="media-object">
+                                        <img data-src="holder.js/50x50?bg=cccccc" class="img-circle" alt="Name">
+                                    </div>
+                                </div>
+                                <div class="media-body">
+                                    <strong class="notification-title"><a href="#">James Bond</a> resolved <a href="#">B-007 - Desolve Spectre organization</a></strong>
+
+                                    <div class="notification-meta">
+                                        <small class="timestamp">1. 9. 2015, 08:00</small>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+
+                    <div class="dropdown-footer text-center">
+                        <a href="#">View All</a>
+
+                    </div><!-- /dropdown-footer -->
+
+                </div><!-- /dropdown-container -->
+            </li><!-- /dropdown -->
         </ul>
     </form>
 }
