#4 added styleshit refferences to production version

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -16,6 +16,16 @@
               asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
+
+        <link rel="stylesheet" 
+              href="https://cdn.rawgit.com/skywalkapps/bootstrap-notifications/b49dc234/dist/stylesheets/bootstrap-notifications.min.css" 
+              asp-append-version="true" />
+
+
+        <link rel="stylesheet"
+              href="https://cdn.rawgit.com/skywalkapps/bootstrap-dropmenu/7364a5a7/dist/stylesheets/bootstrap-dropmenu.min.css"
+              asp-append-version="true" />
+        
     </environment>
 </head>
 <body>
