#4 counter is updated when new notification is arrived

--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -19,7 +19,7 @@
             </li>
             <li class="dropdown dropdown-notifications">
                 <a href="#notifications-panel" class="dropdown-toggle" data-toggle="dropdown">
-                    <i data-count="2" class="glyphicon glyphicon-bell notification-icon"></i>
+                    <i id="_notification_counter" data-count="0" class="glyphicon glyphicon-bell notification-icon"></i>
                 </a>
 
                 <div class="dropdown-container dropdown-position-bottomright">
@@ -28,7 +28,7 @@
                         <div class="dropdown-toolbar-actions">
                             <a href="#">Mark all as read</a>
                         </div>
-                        <h3 class="dropdown-toolbar-title">Notifications (2)</h3>
+                        <h3 class="dropdown-toolbar-title">Notifications (0)</h3>
                     </div><!-- /dropdown-toolbar -->
                     
 
