--- a/Views/Cabinet/_CabinetNav.cshtml
+++ b/Views/Cabinet/_CabinetNav.cshtml
@@ -5,4 +5,5 @@
 <ul class="nav nav-pills nav-stacked">
     <li class="@CabinetNavPages.IndexNavClass(ViewContext)"><a asp-action="Index">Profile</a></li>
     <li class="@CabinetNavPages.ManagePromisesNavClass(ViewContext)"><a asp-action="ManagePromises">Promises</a></li>
+    <li class="@CabinetNavPages.GlobalChatClass(ViewContext)"><a asp-action="GlobalChat">Global chat</a></li>
 </ul>
