--- a/Views/Cabinet/_Layout.cshtml
+++ b/Views/Cabinet/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@using Promises.Views.Cabinet
+@{
     Layout = "/Views/Shared/_Layout.cshtml";
 }
 
@@ -15,4 +16,8 @@
 
 @section Scripts {
     <script type="text/javascript" src="~/js/notification.js"></script>
+    @if (ViewData["ActivePage"].ToString() == @CabinetNavPages.GlobalChat)
+    {
+        <script type="text/javascript" src="~/js/chat.js"></script>
+    }
 }
