--- a/Views/Cabinet/GlobalChat.cshtml
+++ b/Views/Cabinet/GlobalChat.cshtml
@@ -80,7 +80,7 @@
                     </div>
                     <div class="panel-footer">
                         <div class="input-group">
-                            <input id="btn-input" type="text" class="form-control input-sm" placeholder="Type your message here..." />
+                            <input id="_message_input" type="text" class="form-control input-sm" placeholder="Type your message here..." />
                             <span class="input-group-btn">
                                 <button class="btn btn-warning btn-sm" id="_send_message_btn">
                                     Send
