--- a/Views/Cabinet/_CabinetNav.cshtml
+++ b/Views/Cabinet/_CabinetNav.cshtml
@@ -6,4 +6,5 @@
     <li class="@CabinetNavPages.IndexNavClass(ViewContext)"><a asp-action="Index">Profile</a></li>
     <li class="@CabinetNavPages.ManagePromisesNavClass(ViewContext)"><a asp-action="ManagePromises">Promises</a></li>
     <li class="@CabinetNavPages.GlobalChatClass(ViewContext)"><a asp-action="GlobalChat">Global chat</a></li>
+    <li class="@CabinetNavPages.FriendsClass(ViewContext)"><a asp-action="Friends">Friends</a></li>
 </ul>
