--- a/Views/Cabinet/_Layout.cshtml
+++ b/Views/Cabinet/_Layout.cshtml
@@ -16,8 +16,16 @@
 
 @section Scripts {
     <script type="text/javascript" src="~/js/notification.js"></script>
-    @if (ViewData["ActivePage"] != null && ViewData["ActivePage"].ToString() == @CabinetNavPages.GlobalChat)
+    @if (ViewData["ActivePage"] != null)
     {
-        <script type="text/javascript" src="~/js/chat.js"></script>
+        switch (ViewData["ActivePage"].ToString())
+        {
+            case @CabinetNavPages.GlobalChat:
+                <script type="text/javascript" src="~/js/chat.js"></script>
+                break;
+            case @CabinetNavPages.Friends:
+                <script type="text/javascript" src="~/js/find.js"></script>
+                break;
+        }
     }
-}
+    }
