--- a/Views/Cabinet/Friends.cshtml
+++ b/Views/Cabinet/Friends.cshtml
@@ -32,9 +32,9 @@
         <input class="input-style" id="_find_input" type="text" placeholder=" Type email to find a person" />
     </p>
 
-<h4>Friends</h4>
-<div id="_loader_id"></div>
+<h4>Friends</h4> <div id="_friends_loader_id"></div>
+
 <div id="_friends_list" class="list-group"></div>
 
-<h4>Other users</h4>
+<h4>Other users</h4><div id="_others_loader_id"></div>
 <div id="_other_users_list" class="list-group"></div>
