--- a/Views/Cabinet/Friends.cshtml
+++ b/Views/Cabinet/Friends.cshtml
@@ -5,32 +5,11 @@
 }
 
 <link rel="stylesheet" type="text/css" href="~/css/loader.css">
-<style type="text/css">
-    .input-style[type=text] {
-        margin-top: 20px;
-        width: 60%;
-        box-sizing: border-box;
-        border: 2px solid #ccc;
-        border-radius: 4px;
-        font-size: 13px;
-        background-color: white;
-        background-image: url('searchicon.png');
-        background-position: 10px 10px;
-        background-repeat: no-repeat;
-        padding: 6px 10px 6px 20px;
-        -webkit-transition: width 0.4s ease-in-out;
-        transition: width 0.4s ease-in-out;
-    }
+<link rel="stylesheet" type="text/css" href="~/css/searchInput.css">
 
-    .input-style[type=text]:focus {
-        width: 100%;
-    }
-
-</style>
-
-    <p>
-        <input class="input-style" id="_find_input" type="text" placeholder=" Type email to find a person" />
-    </p>
+<p>
+    <input class="input-style" id="_find_input" type="text" placeholder=" Type email to find a person" />
+</p>
 
 <h4>Friends</h4> <div id="_friends_loader_id"></div>
 
