#9 database has been updated.
- messages table and relevent repository have been added
- some scripts were renamed

--- a/Views/Cabinet/_Layout.cshtml
+++ b/Views/Cabinet/_Layout.cshtml
@@ -21,10 +21,10 @@
         switch (ViewData["ActivePage"].ToString())
         {
             case @CabinetNavPages.GlobalChat:
-                <script type="text/javascript" src="~/js/chat.js"></script>
+                <script type="text/javascript" src="~/js/globalChat.js"></script>
                 break;
             case @CabinetNavPages.Friends:
-                <script type="text/javascript" src="~/js/find.js"></script>
+                <script type="text/javascript" src="~/js/friends.js"></script>
                 break;
         }
     }
