--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -64,8 +64,7 @@
     <environment include="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
-        <script src="~/lib/signalr/jquery.signalR.js"></script>
-        <script src="/signalr/hubs"></script>
+        <script type="text/javascript" src="~/lib/signalr-client/signalr-client.js"></script>
     </environment>
     <environment exclude="Development">
         <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.0.min.js"
@@ -80,10 +79,7 @@
                 crossorigin="anonymous"
                 integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa">
         </script>
-        <script src="http://ajax.aspnetcdn.com/ajax/signalr/jquery.signalr-2.2.1.min.js"
-                asp-fallback-src="~/lib/signalr/jquery.signalR.min.js"
-                asp-fallback-test="$.signalR">
-        </script>
+        <script type="text/javascript" src="~/lib/signalr-client/signalr-client.js"></script>
     </environment>
 
     @RenderSection("Scripts", required: false)
