--- a/Views/Cabinet/_Layout.cshtml
+++ b/Views/Cabinet/_Layout.cshtml
@@ -26,6 +26,9 @@
             case @CabinetNavPages.Friends:
                 <script type="text/javascript" src="~/js/friends.js"></script>
                 break;
+            case @CabinetNavPages.PrivateChat:
+                <script type="text/javascript" src="~/js/privateChat.js"></script>
+                break;
         }
     }
     }
