--- a/Views/Cabinet/Friends.cshtml
+++ b/Views/Cabinet/Friends.cshtml
@@ -7,8 +7,11 @@
 <link rel="stylesheet" type="text/css" href="~/css/loader.css">
 <link rel="stylesheet" type="text/css" href="~/css/searchInput.css">
 
+<!--/ It's used to be able to be redirected to another MVC page from javascript-->
+<script type="text/javascript">let url = '@Url.Action("PrivateChat", "Cabinet", new { personId = "__id__", personEmail = "__email__" })'</script>
+
 <p>
-    <input class="input-style" id="_find_input" type="text" placeholder=" Type email to find a person" />
+    <input class="input-style" id="_find_input" type="text" placeholder=" Type email to find a person">
 </p>
 
 <h4>Friends</h4> <div id="_friends_loader_id"></div>
