#9 messages model was extended

--- a/Views/Cabinet/Messages.cshtml
+++ b/Views/Cabinet/Messages.cshtml
@@ -4,6 +4,8 @@
     ViewData.AddActivePage(CabinetNavPages.Messages);
 }
 
+<h2>Messages</h2><div id="_messages_loader_id"></div>
 
-<h2>Messages</h2>
+<div id="_messages_list" class="list-group"></div>
+
 
