--- a/Views/Cabinet/_Layout.cshtml
+++ b/Views/Cabinet/_Layout.cshtml
@@ -29,6 +29,9 @@
             case @CabinetNavPages.PrivateChat:
                 <script type="text/javascript" src="~/js/privateChat.js"></script>
                 break;
+            case @CabinetNavPages.Messages:
+                <script type="text/javascript" src="~/js/messages.js"></script>
+                break;
         }
     }
     }
