--- a/Views/Cabinet/Messages.cshtml
+++ b/Views/Cabinet/Messages.cshtml
@@ -4,6 +4,8 @@
     ViewData.AddActivePage(CabinetNavPages.Messages);
 }
 
+<link rel="stylesheet" type="text/css" href="~/css/loader.css">
+
 <h2>Messages</h2><div id="_messages_loader_id"></div>
 
 <div id="_messages_list" class="list-group"></div>
