--- a/Views/Cabinet/Messages.cshtml
+++ b/Views/Cabinet/Messages.cshtml
@@ -5,6 +5,8 @@
 }
 
 <link rel="stylesheet" type="text/css" href="~/css/loader.css">
+<!--/ It's used to be able to be redirected to another MVC page from javascript-->
+<script type="text/javascript">let url = '@Url.Action("PrivateChat", "Cabinet", new { personId = "__id__", personEmail = "__email__" })'</script>
 
 <h2>Messages</h2><div id="_messages_loader_id"></div>
 
