--- a/Views/Cabinet/Messages.cshtml
+++ b/Views/Cabinet/Messages.cshtml
@@ -3,8 +3,12 @@
     ViewData["Title"] = "Messages";
     ViewData.AddActivePage(CabinetNavPages.Messages);
 }
-
 <link rel="stylesheet" type="text/css" href="~/css/loader.css">
+<style type="text/css">
+    .unread-message {
+        background-color: lightgray;
+    }
+</style>
 <!--/ It's used to be able to be redirected to another MVC page from javascript-->
 <script type="text/javascript">let url = '@Url.Action("PrivateChat", "Cabinet", new { personId = "__id__", personEmail = "__email__" })'</script>
 
