#12 message is marked as readed when opening private chat

--- a/Views/Cabinet/Messages.cshtml
+++ b/Views/Cabinet/Messages.cshtml
@@ -6,7 +6,7 @@
 <link rel="stylesheet" type="text/css" href="~/css/loader.css">
 <style type="text/css">
     .unread-message {
-        background-color: lightgray;
+        background-color: #EBF5FA;
     }
 </style>
 <!--/ It's used to be able to be redirected to another MVC page from javascript-->
