--- a/wwwroot/css/chat.css
+++ b/wwwroot/css/chat.css
@@ -32,6 +32,10 @@
     height: 400px;
 }
 
+.unread-message {
+    background-color: #EBF5FA;
+}
+
 ::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
     background-color: #F5F5F5;
@@ -46,3 +50,5 @@
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
     background-color: #555;
 }
+
+
