chat scrolls to button and other minor changes

--- a/Views/Cabinet/PrivateChat.cshtml
+++ b/Views/Cabinet/PrivateChat.cshtml
@@ -16,7 +16,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-12 col-xs-12 col-lg-12">
-            <div class="panel panel-primary">
+            <div class="panel panel-primary" >
                 <div class="panel-heading" id="accordion">
                     <span class="glyphicon glyphicon-comment"></span> Chat
                     <div class="btn-group pull-right">
@@ -24,7 +24,7 @@
                     </div>
                 </div>
                 <div class="panel-collapse" id="collapseOne">
-                    <div class="panel-body">
+                    <div class="panel-body" id="_messages_panel_id">
                         <ul id="_chat_id" class="chat"></ul>
                     </div>
                     <div class="panel-footer">
