notificates when new message has appeared #4

--- a/Views/Cabinet/_CabinetNav.cshtml
+++ b/Views/Cabinet/_CabinetNav.cshtml
@@ -9,5 +9,5 @@
         //<li class="@CabinetNavPages.GlobalChatClass(ViewContext)"><a asp-action="GlobalChat">Global chat</a></li>
     }
     <li class="@CabinetNavPages.FriendsClass(ViewContext)"><a asp-action="Friends">Friends</a></li>
-    <li class="@CabinetNavPages.MessagesClass(ViewContext)"><a asp-action="Messages">Messages</a></li>
+    <li class="@CabinetNavPages.MessagesClass(ViewContext)"><a id="_messages_navigator_id" asp-action="Messages">Messages</a></li>
 </ul>
