--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -14,12 +14,9 @@
             <li>
                 <button type="submit" class="btn btn-link navbar-btn navbar-link">Log out</button>
             </li>
-            <li>
-                <button type="button" id="_add_notification_button" class="btn btn-link navbar-btn navbar-link">Add notification</button>
-            </li>
             <li class="dropdown dropdown-notifications">
                 <a href="#notifications-panel" class="dropdown-toggle" data-toggle="dropdown">
-                    <i id="_notification_counter" data-count="0" class="glyphicon glyphicon-bell notification-icon"></i>
+                    <i id="_notify_gingle_id" data-count="0" class="glyphicon glyphicon-bell notification-icon"></i>
                 </a>
 
                 <div class="dropdown-container dropdown-position-bottomright">
