--- a/Views/Manage/Index.cshtml
+++ b/Views/Manage/Index.cshtml
@@ -8,7 +8,13 @@
 @Html.Partial("_StatusMessage", Model.StatusMessage)
 <div class="row">
     <div class="col-md-6">
-        <form method="post">
+        <form method="post" enctype="multipart/form-data" asp-controller="Manage"  asp-action="Index">
+
+            <div class="form-group">
+                <label asp-for="Avatar"></label>
+                <input asp-for="Avatar" multiple/>
+            </div>
+            
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Username"></label>
