--- a/Views/Cabinet/_Layout.cshtml
+++ b/Views/Cabinet/_Layout.cshtml
@@ -6,7 +6,7 @@
 <div class="container">
     <div class="row row-offcanvas row-offcanvas-left">
         <div class="col-6 col-md-3 sidebar-offcanvas" id="sidebar">
-            <img src="@Url.Action("GetAvatarImage", "Cabinet")" class="img-responsive img-rounded" alt="Cinque Terre"/>
+            <img src="@Url.Action("GetAvatarImage", "Cabinet")" class="img-responsive img-rounded" alt="Avatar"/>
             @await Html.PartialAsync("_CabinetNav")
         </div>
         <div class="col-12 col-md-9">
