--- a/Views/Cabinet/_CabinetNav.cshtml
+++ b/Views/Cabinet/_CabinetNav.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Promises.Views.Cabinet
 
 <h3>Cabinet</h3>
-
+<img src="@Url.Action("GetAvatarImage", "Cabinet")" class="img-responsive img-rounded" alt="Avatar" />
 <ul class="nav nav-pills nav-stacked">
     <li class="@CabinetNavPages.IndexNavClass(ViewContext)"><a asp-action="Index">Profile</a></li>
     <li class="@CabinetNavPages.ManagePromisesNavClass(ViewContext)"><a asp-action="ManagePromises">Promises</a></li>
