--- a/Views/Cabinet/Friends.cshtml
+++ b/Views/Cabinet/Friends.cshtml
@@ -6,6 +6,7 @@
 
 <link rel="stylesheet" type="text/css" href="~/css/loader.css">
 <link rel="stylesheet" type="text/css" href="~/css/searchInput.css">
+<link rel="stylesheet" type="text/css" href="~/css/indicators.css">
 
 <!--/ It's used to be able to be redirected to another MVC page from javascript-->
 <script type="text/javascript">let url = '@Url.Action("PrivateChat", "Cabinet", new { personId = "__id__", personEmail = "__email__" })'</script>
