--- a/Views/Cabinet/_Layout.cshtml
+++ b/Views/Cabinet/_Layout.cshtml
@@ -36,7 +36,7 @@
                 <script type="text/javascript" src="~/js/friends.js"></script>
                 break;
             case @CabinetNavPages.PrivateChat:
-                <script type="text/javascript" src="~/js/privateChat.js"></script>
+                <script type="text/javascript" src="~/js/chat.js"></script>
                 break;
             case @CabinetNavPages.Messages:
                 <script type="text/javascript" src="~/js/messages.js"></script>
