--- a/Views/Cabinet/_CabinetNav.cshtml
+++ b/Views/Cabinet/_CabinetNav.cshtml
@@ -5,5 +5,5 @@
     <li class="@CabinetNavPages.IndexNavClass(ViewContext)"><a asp-action="Index">Profile</a></li>
     <li class="@CabinetNavPages.ManagePromisesNavClass(ViewContext)"><a asp-action="ManagePromises">Promises</a></li>
     <li class="@CabinetNavPages.FriendsClass(ViewContext)"><a asp-action="Friends">Friends</a></li>
-    <li class="@CabinetNavPages.MessagesClass(ViewContext)"><a id="_messages_navigator_id" asp-action="Messages">Messages</a></li>
+    <li class="@CabinetNavPages.MessagesClass(ViewContext)"><a id="_messages_nav_id" asp-action="Messages">Messages</a></li>
 </ul>
