--- a/Views/Cabinet/Friends.cshtml
+++ b/Views/Cabinet/Friends.cshtml
@@ -6,7 +6,7 @@
 
 <link rel="stylesheet" type="text/css" href="~/css/loader.css">
 <link rel="stylesheet" type="text/css" href="~/css/searchInput.css">
-<link rel="stylesheet" type="text/css" href="~/css/indicators.css">
+<link rel="stylesheet" type="text/css" href="~/css/profileCard.css">
 
 <!--/ It's used to be able to be redirected to another MVC page from javascript-->
 <p>
@@ -15,7 +15,8 @@
 
 <h4>Friends</h4> <div id="_friends_loader_id"></div>
 
-<div id="_friends_list" class="list-group"></div>
+<div class="list-group container-fluid" id="_friends_list"></div>
+
 
 <h4>Other users</h4><div id="_others_loader_id"></div>
-<div id="_other_users_list" class="list-group"></div>
+<div id="_other_users_list" class="list-group container-fluid"></div>
