--- a/wwwroot/css/chat.css
+++ b/wwwroot/css/chat.css
@@ -1,54 +1,72 @@
-﻿.chat {
-    list-style: none;
-    margin: 10px;
-    padding: 10px;
+﻿.panel {
+    width: 500px;
+    border: 1px #A0A0A0 solid;
 }
 
-.chat li {
-    margin-bottom: 10px;
-    padding-bottom: 5px;
-    border-bottom: 1px dotted #B3A9A9;
+.icon {
+    height: 70px;
+    padding-top: 23px;
 }
 
-.chat li.left .chat-body {
-    margin-left: 60px;
+#contact {
+    width: 50px;
+    height: 50px;
+    margin: auto;
+    padding: 7px 8px 7px 8px;
+    background-color: #A4A4A4;
+    border-radius: 25px 25px 25px 25px;
 }
 
-.chat li.right .chat-body {
-    margin-right: 60px;
+.glyphicon-info-sign, .glyphicon-chevron-left {
+    font-size: 25px;
+    color: #37A7FD;
 }
 
-.chat li .chat-body p {
-    margin: 0;
-    color: #777777;
-}
-
-.panel .slidedown .glyphicon, .chat .glyphicon {
-    margin-right: 5px;
+.glyphicon-user {
+    font-size: 35px;
+    color: #FFFFFF;
 }
 
 .panel-body {
+    height: 350px;
     overflow-y: scroll;
-    height: 400px;
 }
 
-.unread-message {
+.date {
+    color: #A4A4A4;
+    text-align: center;
+    margin-bottom: 5px;
+}
+
+.bold {
+    font-weight: bold;
+}
+
+
+.message {
+    font-size: 1.2em;
+    width: auto;
+    max-width: 300px;
+    border-radius: 15px;
+    padding: 10px;
+    margin-bottom: 10px;
+}
+
+.unread {
     background-color: #EBF5FA;
 }
 
-::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-    background-color: #F5F5F5;
+.message-in {
+    background-color: #E5E5EA;
+    margin-left: 20px;
 }
 
-::-webkit-scrollbar {
-    width: 12px;
-    background-color: #F5F5F5;
+.message-out {
+    background-color: #22D351;
+    margin-right: 20px;
+    color: #FFFFFF;
 }
 
-::-webkit-scrollbar-thumb {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-    background-color: #555;
+.glyphicon-send, .glyphicon-camera {
+    color: #848484;
 }
-
-
