--- a/Views/Cabinet/PrivateChat.cshtml
+++ b/Views/Cabinet/PrivateChat.cshtml
@@ -11,7 +11,7 @@
 </script>
 
 
-<link rel="stylesheet" type="text/css" href="~/css/chat.css">
+<link rel="stylesheet" type="text/css" href="~/css/privateChat.css">
 
 <div class="container-fluid">
     <div class="panel panel-default">
