--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,5 +1,5 @@
 @using Microsoft.AspNetCore.Identity
-@using Promises
+@using Promises.Abstract
 @using Promises.Models
 @using Promises.Models.AccountViewModels
 @using Promises.Models.ManageViewModels
