--- a/wwwroot/css/profileCard.css
+++ b/wwwroot/css/profileCard.css
@@ -3,7 +3,7 @@
     padding-top: 3%;
     padding-right: 3%;
     margin-right: 4%;
-    background-color: #940;
+    background-color: #A4A4A4;
     border-radius: 50%;
 }
 
@@ -11,7 +11,7 @@
     padding-top: 3%;
     padding-right: 3%;
     margin-right: 4%;
-    background-color: #690;
+    background-color: #37A7FD;
     border-radius: 50%;
 }
 
