--- a/wwwroot/css/privateChat.css
+++ b/wwwroot/css/privateChat.css
@@ -8,12 +8,21 @@
     padding-top: 23px;
 }
 
-#contact {
+#contact-offline {
     width: 50px;
     height: 50px;
     margin: auto;
     padding: 7px 8px 7px 8px;
     background-color: #A4A4A4;
+    border-radius: 25px 25px 25px 25px;
+}
+
+#contact-online {
+    width: 50px;
+    height: 50px;
+    margin: auto;
+    padding: 7px 8px 7px 8px;
+    background-color: #37A7FD;
     border-radius: 25px 25px 25px 25px;
 }
 
