--- a/Views/Cabinet/Friends.cshtml
+++ b/Views/Cabinet/Friends.cshtml
@@ -13,10 +13,14 @@
     <input class="input-style" id="_find_input" type="text" placeholder=" Type email to find a person">
 </p>
 
-<h4>Friends</h4> <div id="_friends_loader_id"></div>
+<div id="_loader_id"></div>
+<h4 id="_friends_label_id"></h4> 
 
 <div class="list-group container-fluid" id="_friends_list"></div>
 
 
-<h4>Other users</h4><div id="_others_loader_id"></div>
+<h4 id="_others_label_id"></h4>
 <div id="_other_users_list" class="list-group container-fluid"></div>
+
+<h4 id="_pending_label_id"></h4>
+<div id="_pending_users_list" class="list-group container-fluid"></div>
