--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -22,9 +22,9 @@
                 <div class="dropdown-container dropdown-position-bottomright">
 
                     <div class="dropdown-toolbar">
-                        <div class="dropdown-toolbar-actions">
-                            <a href="#">Mark all as read</a>
-                        </div>
+                        <!--<div class="dropdown-toolbar-actions">
+                            <button class="btn btn-primary"><span href="#">Mark all as read</span></button>
+                        </div>-->
                         <h3 class="dropdown-toolbar-title">Notifications (0)</h3>
                     </div><!-- /dropdown-toolbar -->
                     
@@ -34,45 +34,38 @@
                             <div class="media">
                                 <div class="media-left">
                                     <div class="media-object">
-                                        <img data-src="holder.js/50x50?bg=cccccc" class="img-circle" alt="Name">
+                                        <img id="initiator_avatar_id" data-src="holder.js/50x50?bg=cccccc" class="img-circle" alt="Name">
                                     </div>
                                 </div>
                                 <div class="media-body">
-                                    <strong class="notification-title"><a href="#">Nikola Tesla</a> resolved <a href="#">T-14 - Awesome stuff</a></strong>
+                                    <strong class="notification-title">Friend request from <a href="#">Nikola Tesla</a></strong>
 
-                                    <p class="notification-desc">Resolution: Fixed, Work log: 4h</p>
-
-                                    <div class="notification-meta">
+                                    <p>Would like to accept him as a friend?</p>
+                                    
+                                    <button class="btn btn-success">
+                                        <span class="glyphicon glyphicon-ok" href="#"></span>
+                                    </button> 
+                                    
+                                    <button class="btn btn-danger">
+                                        <span class="glyphicon glyphicon-remove" href="#"></span>
+                                    </button>
+                                    
+                                    <!-- <div class="notification-meta">
                                         <small class="timestamp">27. 10. 2015, 08:00</small>
-                                    </div>
+                                    </div>-->
 
                                 </div>
                             </div>
                         </li>
 
-                        <li class="notification">
-                            <div class="media">
-                                <div class="media-left">
-                                    <div class="media-object">
-                                        <img data-src="holder.js/50x50?bg=cccccc" class="img-circle" alt="Name">
-                                    </div>
-                                </div>
-                                <div class="media-body">
-                                    <strong class="notification-title"><a href="#">James Bond</a> resolved <a href="#">B-007 - Desolve Spectre organization</a></strong>
 
-                                    <div class="notification-meta">
-                                        <small class="timestamp">1. 9. 2015, 08:00</small>
-                                    </div>
-
-                                </div>
-                            </div>
-                        </li>
                     </ul>
 
+                <!--
                     <div class="dropdown-footer text-center">
                         <a href="#">View All</a>
 
-                    </div><!-- /dropdown-footer -->
+                    </div> /dropdown-footer -->
 
                 </div><!-- /dropdown-container -->
             </li><!-- /dropdown -->
