#20 notifications are presented

--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -25,41 +25,11 @@
                         <!--<div class="dropdown-toolbar-actions">
                             <button class="btn btn-primary"><span href="#">Mark all as read</span></button>
                         </div>-->
-                        <h3 class="dropdown-toolbar-title">Notifications (0)</h3>
+                        <h3 id="_noti_label_id" class="dropdown-toolbar-title">Notifications (0)</h3>
                     </div><!-- /dropdown-toolbar -->
                     
 
-                    <ul id="_notifications_list" class="dropdown-menu notifications">
-                        <li class="notification">
-                            <div class="media">
-                                <div class="media-left">
-                                    <div class="media-object">
-                                        <img id="initiator_avatar_id" data-src="holder.js/50x50?bg=cccccc" class="img-circle" alt="Name">
-                                    </div>
-                                </div>
-                                <div class="media-body">
-                                    <strong class="notification-title">Friend request from <a href="#">Nikola Tesla</a></strong>
-
-                                    <p>Would like to accept him as a friend?</p>
-                                    
-                                    <button class="btn btn-success">
-                                        <span class="glyphicon glyphicon-ok" href="#"></span>
-                                    </button> 
-                                    
-                                    <button class="btn btn-danger">
-                                        <span class="glyphicon glyphicon-remove" href="#"></span>
-                                    </button>
-                                    
-                                    <!-- <div class="notification-meta">
-                                        <small class="timestamp">27. 10. 2015, 08:00</small>
-                                    </div>-->
-
-                                </div>
-                            </div>
-                        </li>
-
-
-                    </ul>
+                    <ul id="_notifications_list" class="dropdown-menu notifications"></ul>
 
                 <!--
                     <div class="dropdown-footer text-center">
