--- a/Views/Cabinet/PrivateChat.cshtml
+++ b/Views/Cabinet/PrivateChat.cshtml
@@ -26,7 +26,7 @@
                 </div>
                 <div class="col-md-offset-3 col-md-2">
                     <div id=@contactStyle>
-                        <img src="@Url.Action("GetAvatar", "Cabinet", new { userId = @Model.Friend.Id})" 
+                        <img src="@Url.Action("GetAvatarImage", "Cabinet", new { width=33, height=33, quality=60, userId = @Model.Friend.Id})" 
                             height="33" width="33" class="img-circle" alt="Avatar" />
                     </div>
                     @Model.Friend.Email
