--- a/Views/Cabinet/_CabinetNav.cshtml
+++ b/Views/Cabinet/_CabinetNav.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Promises.Views.Cabinet
 
-<img src="@Url.Action("GetAvatarImage", "Cabinet")" class="img-responsive img-rounded" alt="Avatar" />
+<img style="display:block; margin:auto; width:100%" src="@Url.Action("GetAvatarImage", "Cabinet", new { width = 300, height = 250 })" 
+     class="img-responsive img-rounded" alt="Avatar"/>
 <ul class="nav nav-pills nav-stacked">
     <li class="@CabinetNavPages.IndexNavClass(ViewContext)"><a asp-action="Index">Profile</a></li>
     <li class="@CabinetNavPages.ManagePromisesNavClass(ViewContext)"><a asp-action="ManagePromises">Promises</a></li>
