--- a/Views/Cabinet/_Layout.cshtml
+++ b/Views/Cabinet/_Layout.cshtml
@@ -16,21 +16,20 @@
 
 @section Scripts {
     @{
-        //Global var notification
-    }
-
-    
+        //Global varuables
+    } 
     <script type="text/javascript">
-
         //TODO rewrite
         $.get('@Url.Action("GetUnreadAmount", "Cabinet")', v => $("#_messages_nav_id").html("Messages " + (v == 0 ? "" : "(" + v + ")")))
 
         let _RAZOR_URL_CABINET_PRIVATE_CHAT = '@Url.Action("PrivateChat", "Cabinet", new { friendId = "__id__", friendEmail = "__email__" })'
-        let _RAZOR_URL_CABINET_GET_AVATAR = '@Url.Action("GetAvatar", "Cabinet", new { userId = "__id__"})'
+        let _RAZOR_URL_CABINET_GET_AVATAR = '@Url.Action("GetAvatarImage", "Cabinet", new {
+                                            width ="__width__", height="__height__", quality="__quality__", userId = "__id__" })'
 
         let _RAZOR_NOTIFICATION_CONNECTION = new signalR.HubConnection('/notification')
         _RAZOR_NOTIFICATION_CONNECTION.start()
     </script>
+    <script type="text/javascript" src="~/js/helpers.js"></script>
     <script type="text/javascript" src="~/js/notification.js"></script>
 
     
