--- a/Views/Cabinet/Friends.cshtml
+++ b/Views/Cabinet/Friends.cshtml
@@ -5,7 +5,7 @@
 }
 
 <link rel="stylesheet" type="text/css" href="~/css/loader.css">
-<link rel="stylesheet" type="text/css" href="~/css/searchInput.css">
+<link rel="stylesheet" type="text/css" href="~/css/searchControl.css">
 <link rel="stylesheet" type="text/css" href="~/css/profileCard.css">
 
 <!--/ It's used to be able to be redirected to another MVC page from javascript-->
