redundant information has been deleted, essential information about the project has been added

--- a/Views/Home/Contact.cshtml
+++ b/Views/Home/Contact.cshtml
@@ -1,17 +1,17 @@
 ﻿@{
     ViewData["Title"] = "Contact";
 }
+<!--
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
+-->
 
+<h2>Contacts</h2>
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
+    Russia, Saint-Petersburg
 </address>
 
 <address>
-    <strong>Support:</strong> <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Ankarenko Sergey:</strong> <a href="mailto:ankarenkosergey@example.com">ankarenkosergey@example.com</a><br />
+    <strong>Leonid Markizov:</strong> <a href="mailto:Marketing@example.com">marlonya@iclod.com</a>
 </address>
