--- a/Views/Manage/Index.cshtml
+++ b/Views/Manage/Index.cshtml
@@ -12,7 +12,8 @@
 
             <div class="form-group">
                 <label asp-for="Avatar"></label>
-                <img src="@Url.Action("GetAvatarImage", "Cabinet")" class="img-responsive img-rounded" alt="Avatar" />
+                <img src="@Url.Action("GetAvatarImage", "Cabinet", new { width = 300, height = 300, quality = 100})" 
+                    class="img-responsive img-rounded" alt="Avatar" />
                 <input asp-for="Avatar" multiple/>
             </div>
             
