--- a/Views/Cabinet/Messages.cshtml
+++ b/Views/Cabinet/Messages.cshtml
@@ -16,7 +16,7 @@
 
 <!--/ It's used to be able to be redirected to another MVC page from javascript-->
 
-<h2>Messages</h2><div id="_messages_loader_id"></div>
+<div id="_messages_loader_id"></div>
 
 <div id="_messages_list" class="list-group container-fluid"></div>
 
