--- a/Views/Cabinet/_CabinetNav.cshtml
+++ b/Views/Cabinet/_CabinetNav.cshtml
@@ -1,10 +1,16 @@
 ﻿@using Promises.Views.Cabinet
 
+<style>
+    .main-avatar {
+        padding-bottom: 20px;
+    }
+</style>
+
 <img style="display:block; margin:auto; width:100%" src="@Url.Action("GetAvatarImage", "Cabinet", new { width = 300, height = 250 })" 
-     class="img-responsive img-rounded" alt="Avatar"/>
+     class="img-responsive img-rounded main-avatar" alt="Avatar"/>
 <ul class="nav nav-pills nav-stacked">
     <li class="@CabinetNavPages.IndexNavClass(ViewContext)"><a asp-action="Index">Profile</a></li>
-    <li class="@CabinetNavPages.ManagePromisesNavClass(ViewContext)"><a asp-action="ManagePromises">Promises</a></li>
+    <!--<li class="@CabinetNavPages.ManagePromisesNavClass(ViewContext)"><a asp-action="ManagePromises">Promises</a></li>-->
     <li class="@CabinetNavPages.FriendsClass(ViewContext)"><a asp-action="Friends">Friends</a></li>
     <li class="@CabinetNavPages.MessagesClass(ViewContext)"><a id="_messages_nav_id" asp-action="Messages">Messages</a></li>
 </ul>
