--- a/Views/Home/Contact.cshtml
+++ b/Views/Home/Contact.cshtml
@@ -5,13 +5,14 @@
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
 -->
+<div class="jumbotron">
+    <h2>Contacts</h2>
+    <address>
+        Russia, Saint-Petersburg
+    </address>
 
-<h2>Contacts</h2>
-<address>
-    Russia, Saint-Petersburg
-</address>
-
-<address>
-    <strong>Ankarenko Sergey:</strong> <a href="mailto:ankarenkosergey@example.com">ankarenkosergey@example.com</a><br />
-    <strong>Leonid Markizov:</strong> <a href="mailto:Marketing@example.com">marlonya@iclod.com</a>
-</address>
+    <address>
+        <strong>Ankarenko Sergey:</strong> <a href="mailto:ankarenkosergey@example.com">ankarenkosergey@example.com</a><br />
+        <strong>Leonid Markizov:</strong> <a href="mailto:Marketing@example.com">marlonya@iclod.com</a>
+    </address>
+</div>
