--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,8 +5,16 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
+<link rel="stylesheet" type="text/css" href="~/css/entrancePage.css">
+<script type="text/javascript" src="~/js/entrance.js"></script>
 
+<h1>
+    <a href="" class="typewrite" data-period="4000" data-type='[ "Faster Better Stronger", "Motivate yourself with Smart Promise" ]'>
+        <span class="wrap"></span>
+    </a>
+</h1>
+    <!--
+<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
 
     <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -14,7 +22,7 @@
         <li data-target="#myCarousel" data-slide-to="2"></li>
         <li data-target="#myCarousel" data-slide-to="3"></li>
     </ol>
-
+        
     <div class="carousel-inner" role="listbox">
         <div class="item active">
             <img src="~/images/banner1.svg" alt="ASP.NET" class="img-responsive" />
@@ -71,10 +79,11 @@
     </a>
 </div>
 
-
+-->
+<!--
 <div class="row">
     <div class="room"></div>
-    <!--
+    
     <div class="col-md-3">
         <h2>Application uses</h2>
         <ul>
@@ -114,5 +123,6 @@
             <li><a href="https://go.microsoft.com/fwlink/?LinkID=398609">Publish to Microsoft Azure Web Apps</a></li>
         </ul>
     </div>
-        --->
+        
 </div>
+-->
