--- a/Views/Cabinet/_Layout.cshtml
+++ b/Views/Cabinet/_Layout.cshtml
@@ -3,6 +3,14 @@
     Layout = "/Views/Shared/_Layout.cshtml";
 }
 
+
+<style>
+    body {
+        padding-top: 70px;
+    }
+</style>
+
+
 <div class="container">
     <div class="row row-offcanvas row-offcanvas-left">
         <div class="col-6 col-md-3 sidebar-offcanvas" id="sidebar">
