--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -3,7 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Promises</title>
+    <title>@ViewData["Title"] - Smart Promise</title>
+
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -55,10 +56,13 @@
     </nav>
     <div class="container body-content">
         @RenderBody()
+        <!--
         <hr />
+        
         <footer>
             <p>&copy; 2017 - Promises</p>
         </footer>
+            -->
     </div>
 
     <environment include="Development">
