--- a/wwwroot/css/searchControl.css
+++ b/wwwroot/css/searchControl.css
@@ -1,14 +1,14 @@
 ﻿.input-style[type=text] {
-    margin-top: 20px;
     width: 60%;
     box-sizing: border-box;
     border: 2px solid #ccc;
     border-radius: 4px;
     font-size: 13px;
+    background-image: url("../images/search_icon.png");
     background-color: white;
     background-position: 10px 10px;
     background-repeat: no-repeat;
-    padding: 6px 10px 6px 20px;
+    padding: 6px 10px 6px;
     -webkit-transition: width 0.4s ease-in-out;
     transition: width 0.4s ease-in-out;
 }
