--- a/wwwroot/css/entrancePage.css
+++ b/wwwroot/css/entrancePage.css
@@ -1,13 +1,17 @@
 ﻿body {
-    background-image: url("../images/entrance_wallpaper.jpeg");
-    background-color: #808080;
+    background-color: #A2BAE7;
     text-align: center;
     color: #2e2c2c;
-    padding-top: 40%;
+    padding-top: 20%;
     height: 100%;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+.shadowed {
+    box-shadow: 3px 3px 200px black;
+    background-color: #F8F2D8;
 }
 
 * {
