#24 can add promises

--- a/Views/Cabinet/_Layout.cshtml
+++ b/Views/Cabinet/_Layout.cshtml
@@ -54,6 +54,9 @@
             case @CabinetNavPages.Messages:
                 <script type="text/javascript" src="~/js/messages.js"></script>
                 break;
+            case CabinetNavPages.Index: 
+                <script type="text/javascript" src="~/js/profilePage.js"></script>
+                break;
         }
     }
     }
