--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
-        <link rel="stylesheet" href="~/css/site.css" />
+        <link rel="stylesheet" href="~/css/out/bundle.css" />
         <link rel="stylesheet" href="~/lib/bootstrap-dropmenu/dist/stylesheets/bootstrap-dropmenu.css"/>
         <link rel="stylesheet" href="~/lib/bootstrap-notifications/dist/stylesheets/bootstrap-notifications.css"/>
     </environment>
@@ -16,7 +16,7 @@
         <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
               asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
-        <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
+        <link rel="stylesheet" href="~/css/out/bundle.min.css" asp-append-version="true" />
 
         <link rel="stylesheet" 
               href="https://cdn.rawgit.com/skywalkapps/bootstrap-notifications/b49dc234/dist/stylesheets/bootstrap-notifications.min.css" 
