--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -16,7 +16,7 @@
             </li>
             <li class="dropdown dropdown-notifications">
                 <a href="#notifications-panel" class="dropdown-toggle" data-toggle="dropdown">
-                    <i id="_gingle_id" data-count="0" class="glyphicon glyphicon-bell notification-icon"></i>
+                    <span id="_gingle_id" data-count="0" class="glyphicon glyphicon-bell notification-icon"></span>
                 </a>
 
                 <div class="dropdown-container dropdown-position-bottomright">
